crates/ladder_types/tests/ui/generated/should_fail/test__typenum_ladder__R1_plus_R3.stderr
error[E0308]: mismatched types
 --> tests/ui/generated/should_fail/test__typenum_ladder__R1_plus_R3.rs:5:24
  |
5 |    let _ = R1::new() + R3::new();
  |                        ^^^^^^^^^ expected `typenum::bit::B0`, found `typenum::bit::B1`
  |
  = note: expected struct `ladder_types::typenum_ladder::LadderRung<typenum::uint::UInt<typenum::uint::UInt<typenum::uint::UTerm, typenum::bit::B1>, typenum::bit::B0>>`
             found struct `ladder_types::typenum_ladder::LadderRung<typenum::uint::UInt<typenum::uint::UInt<typenum::uint::UTerm, typenum::bit::B1>, typenum::bit::B1>>`
